@@ -112,71 +112,29 @@ class LeafMatch : public Match
         ~LeafMatch();
 
 	///////////////////////////////////////////////////////////////////
-	// Set the terms and operations which comprise the query
-	// =====================================================
+	// Implement these virtual methods 
 
-	/** Sets query to use. */
 	void set_query(const OmQueryInternal * query_);
 
-	///////////////////////////////////////////////////////////////////
-	// Set additional options for performing the query
-	// ===============================================
-
-	/** Set relevance information - the RSet object should not be
-	 *  altered after this call.
-	 */
         void set_rset(RSet * rset_);
-
-	/** Set cutoff at min percentage - defaults to -1, which means no
-	 *  cutoff.
-	 */
         void set_min_weight_percent(int pcent);
-
-	/** Add a key number to collapse by.  Each key value will appear only
-	 *  once in the result set.  Collapsing can only be done on one key
-	 *  number.
-	 */
 	void set_collapse_key(om_keyno key);
-
-	/** Remove the collapse key. */
 	void set_no_collapse();
 
-	///////////////////////////////////////////////////////////////////
-	// Get information about result
-	// ============================
-
-	/** Get an upper bound on the possible weights.
-	 *  (This bound is unlikely to be attained.)
-	 */
         om_weight get_max_weight();
 
-	/** Perform the match operation, and get the matching items.
-	 *  Also returns a lower bound on the number of matching records in
-	 *  the database (mbound).  Because of some of the optimisations
-	 *  performed, this is likely to be much lower than the actual
-	 *  number of matching records, but it is expensive to do the
-	 *  exact calculation.
-	 * 
-	 *  It is generally considered that presenting the mbound to users
-	 *  causes them to worry about the large number of results, rather
-	 *  than how useful those at the top of the mset are, and is thus
-	 *  undesirable.
-	 */
-	void match(om_doccount first,      // First item to return (start at 0)
-		   om_doccount maxitems,   // Maximum number of items to return
-		   vector<OmMSetItem> & mset,// Results will be put here
-		   mset_cmp cmp,           // Comparison operator to sort by
-		   om_doccount * mbound,   // Mbound will returned here
-		   om_weight * greatest_wt,// Gets set to max weight attained
-		   const OmMatchDecider *mdecider // Optional decider functor
+	void match(om_doccount first,
+		   om_doccount maxitems,
+		   vector<OmMSetItem> & mset,
+		   mset_cmp cmp,
+		   om_doccount * mbound,
+		   om_weight * greatest_wt,
+		   const OmMatchDecider *mdecider
 		   );
 
-	/** Do a pure boolean match.
-	 *  All weights in the result will be set to 1.
-	 */
-	void boolmatch(om_doccount first,  // First item to return (start at 0)
-		       om_doccount maxitems,// Maximum number of items to return
-		       vector<OmMSetItem> & mset); // Results
+	void boolmatch(om_doccount first,
+		       om_doccount maxitems,
+		       vector<OmMSetItem> & mset);
 
 	///////////////////////////////////////////////////////////////////
 	// Miscellaneous
